GNOME Bugzilla – Bug 752549
covertiy warning
Last modified: 2015-10-04 16:01:05 UTC
Coverity says: gobject-introspection-1.42.0/girepository/girparser.c:1069: dereference: Dereferencing a pointer that might be null "transfer" when calling "strcmp". # 1067| state_switch (ctx, STATE_PASSTHROUGH); # 1068| # 1069|-> if (strcmp (transfer, "full") == 0) # 1070| transfer_full = TRUE; # 1071| else if (strcmp (transfer, "none") == 0) and it is right. If find_attribute returns NULL, this will crash. Depending on what outcome is desired here, it could be fixed by adding an if (transfer == NULL) clause before the strcmps or by switching to g_strcmp0.
https://git.gnome.org/browse/gobject-introspection/commit/?id=2699d5116ab5aaf801521c0f6c96bda09a23fb15