girparser: Avoid a crash with an unset transfer annotation

Spotted by Coverity.

https://bugzilla.gnome.org/show_bug.cgi?id=752549